--- a/Front/package.json
+++ b/Front/package.json
@@ -21,6 +21,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "postbuild": "cp public/static.json build/static.json",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
