--- a/Front/.env.production
+++ b/Front/.env.production
@@ -1,1 +1,2 @@
-REACT_APP_BACKEND_URL=https://proyecto-web-backend-uhui.onrender.com
+REACT_APP_BACKEND_URL=https://proyecto-web-backend-uhui.onrender.com/api
+
